--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,7 @@
     "modernizr": "^3.3.1",
     "retina.js": "^1.3.0",
     "PACE": "pace#^1.0.2",
-    "font-awesome": "fontawesome#^4.5.0"
+    "font-awesome": "fontawesome#^4.5.0",
+    "vivus": "^0.3.0"
   }
 }
