--- a/bower.json
+++ b/bower.json
@@ -23,6 +23,7 @@
     "retina.js": "^1.3.0",
     "PACE": "pace#^1.0.2",
     "font-awesome": "fontawesome#^4.5.0",
-    "vivus": "^0.3.0"
+    "vivus": "^0.3.0",
+    "enquire": "^2.1.2"
   }
 }
