sorted animated buttons

--- a/bower.json
+++ b/bower.json
@@ -24,6 +24,7 @@
     "PACE": "pace#^1.0.2",
     "font-awesome": "fontawesome#^4.5.0",
     "vivus": "^0.3.0",
-    "enquire": "^2.1.2"
+    "enquire": "^2.1.2",
+    "Scrollify": "^0.1.14"
   }
 }
